--- a/package.json
+++ b/package.json
@@ -28,9 +28,12 @@
     "stylelint": "^13.6.1"
   },
   "dependencies": {
+    "connect-pg-simple": "^6.2.1",
     "express": "^4.17.1",
     "express-handlebars": "^5.1.0",
+    "express-session": "^1.17.1",
     "pg": "^8.3.3",
-    "pg-hstore": "^2.3.3"
+    "pg-hstore": "^2.3.3",
+    "sequelize": "^6.3.4"
   }
 }
