--- a/package.json
+++ b/package.json
@@ -28,13 +28,19 @@
     "stylelint": "^13.6.1"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "connect-pg-simple": "^6.2.1",
+    "crypto": "^1.0.1",
+    "csurf": "^1.11.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.1.0",
     "express-session": "^1.17.1",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "pg": "^8.3.3",
     "pg-hstore": "^2.3.3",
-    "sequelize": "^6.3.4"
+    "sequelize": "^6.3.4",
+    "sequelize-cli": "^6.2.0"
   }
 }
